# flyvis-gnn

./: .gitattributes  .gitignore  .nojekyll  GNN_Agentic.py  GNN_Main.py  GNN_PlotFigure.py  GNN_Test.py  LICENCE.md  Notebook_00.py  Notebook_01.html  Notebook_01.py  Notebook_02.html  Notebook_02.py  Notebook_03.html  Notebook_03.py  Notebook_04.html  Notebook_04.py  Notebook_05.py  Notebook_06.html  Notebook_06.py  Notebook_07.html  Notebook_07.py  Notebook_08.html  Notebook_08.py  Notebook_09.html  Notebook_09.py  README.md  _quarto.yml  fetch_flywire_meshes.py  index-listing.json  index.html  index.qmd  listings.json  plot_two_panel.py  pyproject.toml  robots.txt  search.json  sitemap.xml  train_flyvis_subprocess.py
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml
LLM/: instruction_flyvis_noise_005_agentic.md  instruction_flyvis_noise_05.md  instruction_flyvis_noise_free.md
assets/: make_llm_loop_fig.py  make_r2_barplot.py
config/: test_reference.json
docs/: Notebook_00.html  Notebook_01.html  Notebook_02.html  Notebook_03.html  Notebook_04.html  Notebook_05.html  Notebook_06.html  Notebook_07.html  Notebook_08.html  Notebook_09.html  index.html  robots.txt  search.json  sitemap.xml
envs/: environment.linux.yaml  environment.mac.yaml
scripts/: compare_ode_params.py  test_hh_params.py
tests/: conftest.py  test_config.py  test_denoise.py  test_fitting_models.py  test_flyvis_dataset.py  test_flyvis_gnn_model.py  test_generators_utils.py  test_metrics.py  test_mlp.py  test_models_utils.py  test_neuron_state.py  test_registry.py  test_siren.py  test_training_smoke.py  test_training_utils.py  test_utils.py
tools/: analysis_iter_004.py  analysis_iter_008.py  analysis_iter_012.py  analysis_iter_016.py  analysis_iter_020.py  analysis_iter_024.py  analysis_iter_028.py  analysis_iter_032.py  analysis_iter_036.py  analysis_iter_040.py  analysis_iter_044.py  analysis_iter_048.py  analysis_iter_052.py  analysis_iter_056.py
(+267 files in other folders)
